--- a/mod_1.html
+++ b/mod_1.html
@@ -575,6 +575,20 @@
                         </div>
                     </div>
                 </div>
+                 <div class="activity-card border-teal-400">
+                    <h2 class="text-3xl font-bold text-center text-teal-600 mb-6">And More Practice!</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/senses_3.png" alt="Senses game preview" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Play this game to practice your senses vocabulary!</p>
+                            <a href="https://wordwall.net/resource/4469971" target="_blank" rel="noopener noreferrer" class="nav-button bg-teal-500 hover:bg-teal-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Play on Wordwall!
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
              <div class="text-center mt-8">
@@ -623,6 +637,22 @@
                                 Open Digital Book
                             </a>
                             <p class="text-md text-gray-500 mt-2">Clil, Social Science, Ex 1, pg 13</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Whack-a-mole game -->
+                <div class="activity-card border-indigo-400">
+                    <h2 class="text-3xl font-bold text-center text-indigo-600 mb-6">Whack-a-mole Game!</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/ch_moles.png" alt="Whack-a-mole game preview" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Play the 'ch' sound whack-a-mole game!</p>
+                            <a href="https://wordwall.net/resource/97729378" target="_blank" rel="noopener noreferrer" class="nav-button bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Play on Wordwall!
+                            </a>
                         </div>
                     </div>
                 </div>
