moved other images

--- a/mod_1.html
+++ b/mod_1.html
@@ -684,11 +684,11 @@
 
         // --- Numbers & Colours Game Logic ---
         const numbersData = [
-            { number: 23, color: 'red', imageUrl: 'https://johanka2014.github.io/i_wonder_2/23.png' },
-            { number: 31, color: 'yellow', imageUrl: 'https://johanka2014.github.io/i_wonder_2/31.png' },
-            { number: 46, color: 'green', imageUrl: 'https://johanka2014.github.io/i_wonder_2/46.png' },
-            { number: 22, color: 'orange', imageUrl: 'https://johanka2014.github.io/i_wonder_2/22.png' },
-            { number: 38, color: 'purple', imageUrl: 'https://johanka2014.github.io/i_wonder_2/38.png' }
+            { number: 23, color: 'red', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/23.png' },
+            { number: 31, color: 'yellow', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/31.png' },
+            { number: 46, color: 'green', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/46.png' },
+            { number: 22, color: 'orange', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/22.png' },
+            { number: 38, color: 'purple', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/38.png' }
         ];
         const numberWords = { 10: 'ten', 20: 'twenty', 30: 'thirty', 40: 'forty', 50: 'fifty' };
         
@@ -759,11 +759,11 @@
         
         // --- Senses Game Logic ---
         const sensesData = [
-            { part: 'eyes', action: 'see', imageUrl: 'https://johanka2014.github.io/i_wonder_2/eyes.png' },
-            { part: 'ears', action: 'hear', imageUrl: 'https://johanka2014.github.io/i_wonder_2/ears.png' },
-            { part: 'nose', action: 'smell', imageUrl: 'https://johanka2014.github.io/i_wonder_2/nose.png' },
-            { part: 'tongue', action: 'taste', imageUrl: 'https://johanka2014.github.io/i_wonder_2/tongue.png' },
-            { part: 'hands', action: 'touch', imageUrl: 'https://johanka2014.github.io/i_wonder_2/hands.png' }
+            { part: 'eyes', action: 'see', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/eyes.png' },
+            { part: 'ears', action: 'hear', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/ears.png' },
+            { part: 'nose', action: 'smell', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/nose.png' },
+            { part: 'tongue', action: 'taste', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/tongue.png' },
+            { part: 'hands', action: 'touch', imageUrl: 'https://johanka2014.github.io/i_wonder_2/mod_1/hands.png' }
         ];
 
         const sensesPartsContainer = document.getElementById('senses-parts');
