--- a/mod_2.html
+++ b/mod_2.html
@@ -350,6 +350,12 @@
                             </a>
                              <p class="text-md text-gray-500 mt-2">Mod 2, exercise 10, pg 22</p>
                         </div>
+                        <div class="activity-card border-purple-400">
+                    <h2 class="text-3xl font-bold text-center text-purple-600 mb-6">More Science Fun!</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_2/animals_19.png" alt="Science activity" class="rounded-2xl shadow-md w-full">
+                        </div>
                     </div>
                 </div>
             </div>
