Update link to the furniture practice game

--- a/mod_3.html
+++ b/mod_3.html
@@ -245,7 +245,7 @@
                         </div>
                         <div class="text-center">
                             <p class="text-xl mb-6 text-gray-600">Play a game to practice the words for furniture!</p>
-                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                            <a href="https://wordwall.net/resource/100753618" target="_blank" rel="noopener noreferrer" class="nav-button bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Open Digital Book
                             </a>
                         </div>
