--- a/mod_3.html
+++ b/mod_3.html
@@ -251,7 +251,16 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="activity-card border-cyan-400">
+                    <h2 class="text-3xl font-bold text-center text-cyan-600 mb-6">My Room Song</h2>
+                    <div class="flex flex-col items-center gap-6">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_3/room_song.png" alt="My Room Song" class="rounded-2xl shadow-md w-full max-w-2xl">
+                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_3/1_30_iwonder2_ex9_p37.mp3" class="w-full max-w-md">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
                         
                 <div class="activity-card border-cyan-400">
                     <h2 class="text-3xl font-bold text-center text-cyan-600 mb-6">Listen and Match</h2>
