--- a/mod_4.html
+++ b/mod_4.html
@@ -270,7 +270,7 @@
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_4/13.png" alt="My Room Song" class="rounded-2xl shadow-md w-full max-w-2xl">
                         <p class="text-lg text-gray-600">Click play to listen to the song!</p>
-                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_4/1_41_iwonder_2_song_ex9_p49" class="w-full max-w-md">
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_4/1_41_iwonder_2_song_ex9_p49.mp3" class="w-full max-w-md">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
