--- a/mod_4.html
+++ b/mod_4.html
@@ -126,10 +126,15 @@
     <!-- Navigation -->
     <nav class="p-6 flex flex-wrap justify-center gap-3 md:gap-4">
         <button onclick="showSection('vocabulary')" class="nav-button active bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-full text-lg">🥗 Vocabulary</button>
+
         <button onclick="showSection('story')" class="nav-button bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-full text-lg">📖 Story</button>
+
         <button onclick="showSection('my-room')" class="nav-button bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-3 px-6 rounded-full text-lg">🍔 Food Discussion</button>
+
         <button onclick="showSection('materials')" class="nav-button bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full text-lg">🍪Science</button>
-        <button onclick="showSection('practice')" class="nav-button bg-lime-500 hover:bg-lime-600 text-white font-bold py-3 px-6 rounded-full text-lg">✍️ Practice</button>
+        
+       <button onclick="showSection('sounds')" class="nav-button bg-lime-500 hover:bg-lime-600 text-white font-bold py-3 px-6 rounded-full text-lg">✍️ Sounds</button>
+
         <button onclick="showSection('sounds')" class="nav-button bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-full text-lg">🔊 Sounds</button>
     </nav>
 
