--- a/mod_4.html
+++ b/mod_4.html
@@ -132,10 +132,10 @@
         <button onclick="showSection('my-room')" class="nav-button bg-cyan-500 hover:bg-cyan-600 text-white font-bold py-3 px-6 rounded-full text-lg">🍔 Food Discussion</button>
 
         <button onclick="showSection('science')" class="nav-button bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full text-lg">🍪Science</button>
-        
-       <button onclick="showSection('sounds')" class="nav-button bg-lime-500 hover:bg-lime-600 text-white font-bold py-3 px-6 rounded-full text-lg">✍️ Sounds</button>
+            
+        <button onclick="showSection('sounds')" class="nav-button bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-full text-lg">🔊 Sounds</button>
 
-        <button onclick="showSection('practice')" class="nav-button bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-full text-lg">🔊 Practice</button>
+        <button onclick="showSection('practice')" class="nav-button bg-lime-500 hover:bg-lime-600 text-white font-bold py-3 px-6 rounded-full text-lg">✍️ Practice</button>
     </nav>
 
     <main class="container mx-auto p-4 md:p-8">
