--- a/mod_4.html
+++ b/mod_4.html
@@ -460,14 +460,14 @@
                     <h2 class="text-3xl font-bold text-center text-yellow-600 mb-6">Review</h2>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
-                            <img src="https://johanka2014.github.io/i_wonder_2/mod_3/22.png" alt="Sounds review" class="rounded-2xl shadow-md w-full">
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_4/35.png" alt="Sounds review" class="rounded-2xl shadow-md w-full">
                         </div>
                         <div class="text-center">
-                            <p class="text-xl mb-6 text-gray-600">Complete the exercise in the digital book!</p>
+                            <p class="text-xl mb-6 text-gray-600">Complete the exercises in the digital book!</p>
                             <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Open Digital Book
                             </a>
-                            <p class="text-md text-gray-500 mt-2">Mod 3, CLIL 3, Exercise 1, pg 39</p>
+                            <p class="text-md text-gray-500 mt-2">Mod 4, CLIL, Exercise 1, pg 51</p>
                         </div>
                     </div>
                 </div>
