--- a/mod_4.html
+++ b/mod_4.html
@@ -392,17 +392,44 @@
         <section id="practice" class="content-section">
             <div class="space-y-8">
                 <div class="activity-card border-lime-400">
-                    <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Fill the gaps</h2>
+                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Fill the gaps</h2>
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_4/36.png" alt="Fill the gaps" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
                 <div class="activity-card border-lime-400">
-                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">What's Missing?</h2>
-                    <div class="flex justify-center">
-                        <img src="https://johanka2014.github.io/i_wonder_2/mod_3/practice_2.png" alt="What's missing activity" class="rounded-2xl shadow-md w-full max-w-3xl">
+                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Listen and number</h2>
+                    <div class="flex flex-col items-center gap-6">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/37.png" alt="Listen and number" class="rounded-2xl shadow-md w-full max-w-2xl">
+                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_4/1_45_iwonder_2_ex3_p55.mp3" class="w-full max-w-md">
+                            Your browser does not support the audio element.
+                        </audio>
                     </div>
-                    <p class="text-center text-lg text-gray-600 mt-4">Read the list and draw the missing parts on the house!</p>
+                </div>
+                <div class="activity-card border-lime-400">
+                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Reading</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/38.png" alt="Reading" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+                <div class="activity-card border-lime-400">
+                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Reading</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/39.png" alt="Reading" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+                <div class="activity-card border-lime-400">
+                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Reading</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/40.png" alt="Reading" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+                <div class="activity-card border-lime-400">
+                    <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Reading</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/41.png" alt="Reading" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
                 </div>
             </div>
             <div class="text-center mt-8">
