--- a/mod_4.html
+++ b/mod_4.html
@@ -247,13 +247,17 @@
                  <div class="activity-card border-cyan-400">
                     <h2 class="text-3xl font-bold text-center text-cyan-600 mb-6">What do you eat?</h2>
                     <div class="flex justify-center">
-                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/10.png" alt="Odd one out" class="rounded-2xl shadow-md w-full max-w-4xl">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/10.png" alt="What do you eat?" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
                 <div class="activity-card border-cyan-400">
                     <h2 class="text-3xl font-bold text-center text-cyan-600 mb-6">Your turn</h2>
-                    <div class="flex justify-center">
-                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/12.png" alt="Odd one out" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    <div class="flex flex-col items-center gap-6">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_4/12.png" alt="Your turn" class="rounded-2xl shadow-md w-full max-w-2xl">
+                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_4/1_40_iwonder_2_ex8_p48.mp3" class="w-full max-w-md">
+                            Your browser does not support the audio element.
+                        </audio>
                     </div>
                 </div>
                 <div class="activity-card border-cyan-400">
