--- a/mod_4.html
+++ b/mod_4.html
@@ -254,7 +254,7 @@
                     <h2 class="text-3xl font-bold text-center text-cyan-600 mb-6">Your turn</h2>
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_4/12.png" alt="Your turn" class="rounded-2xl shadow-md w-full max-w-2xl">
-                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
+                        <p class="text-lg text-gray-600">Listen and choose!</p>
                         <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_4/1_40_iwonder_2_ex8_p48.mp3" class="w-full max-w-md">
                             Your browser does not support the audio element.
                         </audio>
