--- a/mod_4.html
+++ b/mod_4.html
@@ -405,7 +405,7 @@
                     <h2 class="text-3xl font-bold text-center text-lime-600 mb-6">Listen and number</h2>
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_4/37.png" alt="Listen and number" class="rounded-2xl shadow-md w-full max-w-2xl">
-                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
+                        <p class="text-lg text-gray-600">Listen and number</p>
                         <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_4/1_45_iwonder_2_ex3_p55.mp3" class="w-full max-w-md">
                             Your browser does not support the audio element.
                         </audio>
@@ -452,7 +452,7 @@
                 </div>
                 
                 <div class="activity-card border-yellow-400">
-                    <h2 class="text-3xl font-bold text-center text-yellow-600 mb-6">Odd one out</h2>
+                    <h2 class="text-3xl font-bold text-center text-yellow-600 mb-6">S and C sounds</h2>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
                             <img src="https://johanka2014.github.io/i_wonder_2/mod_4/33.png" alt="Find the match game" class="rounded-2xl shadow-md w-full">
