--- a/mod_5.html
+++ b/mod_5.html
@@ -268,12 +268,12 @@
             const sportGameContainer = document.getElementById('sport-game-sort');
             if (sportGameContainer) {
                 const items = [
-                    { name: "Basketball", type: "Sport", icon: "🏀" },
-                    { name: "Hopscotch", type: "Game", icon: "🔢" },
-                    { name: "Tag", type: "Game", icon: "🏃" },
-                    { name: "Football", type: "Sport", icon: "⚽" },
-                    { name: "Hide and Seek", type: "Game", icon: "🫣" },
-                    { name: "Tennis", type: "Sport", icon: "🎾" }
+                    { name: "Play Basketball", type: "Sport", icon: "🏀" },
+                    { name: "Play Hopscotch", type: "Game", icon: "🔢" },
+                    { name: "Play Tag", type: "Game", icon: "🏃" },
+                    { name: "Play Football", type: "Sport", icon: "⚽" },
+                    { name: "Play Hide and Seek", type: "Game", icon: "🫣" },
+                    { name: "Play Tennis", type: "Sport", icon: "🎾" }
                 ];
 
                 items.forEach(item => {
