--- a/mod_5.html
+++ b/mod_5.html
@@ -138,6 +138,23 @@
                          <div id="action-match-feedback" class="text-2xl font-bold h-8"></div>
                     </div>
                 </div>
+
+                <div class="activity-card border-orange-400">
+                    <h2 class="text-3xl font-bold text-center text-orange-600 mb-6">More Practice</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/16.png" alt="PMore Practice" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Let's practice in the digital book!</p>
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Open Digital Book
+                            </a>
+                            <p class="text-md text-gray-500 mt-2">Mod 5, exercise 1, page 56</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="text-center mt-8">
                 <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
@@ -147,6 +164,18 @@
         <!-- Story Section -->
         <section id="story" class="content-section">
             <div class="space-y-8">
+
+                <div class="activity-card border-teal-400">
+                    <h2 class="text-3xl font-bold text-center text-teal-600 mb-6">Sports Day</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/1.png" alt="Sports Day" class="rounded-2xl shadow-md w-full max-w-4xl">
+
+                    </div>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/2.png" alt="Sports Day" class="rounded-2xl shadow-md w-full max-w-4xl">
+                </div>
+            </div>
+
                 <div class="activity-card border-blue-400">
                     <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Sports Day!</h2>
                     <div class="bg-blue-50 p-6 rounded-xl mb-6">
