--- a/mod_5.html
+++ b/mod_5.html
@@ -165,8 +165,8 @@
         <section id="story" class="content-section">
             <div class="space-y-8">
 
-                <div class="activity-card border-teal-400">
-                    <h2 class="text-3xl font-bold text-center text-teal-600 mb-6">Sports Day</h2>
+                <div class="activity-card border-blue-400">
+                    <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Sports Day</h2>
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/1.png" alt="Sports Day" class="rounded-2xl shadow-md w-full max-w-4xl">
 
@@ -187,7 +187,7 @@
                             But look at Chico! He is winning the race!<br>
                             <strong>"You're the best, Chico!"</strong>
                         </p>
-                    </div>
+                    </div>                   
                 </div>
 
                 <div class="activity-card border-blue-400">
@@ -199,6 +199,8 @@
                     <div id="story-quiz-feedback" class="mt-6 text-center text-2xl font-bold h-8"></div>
                 </div>
             </div>
+
+            
             <div class="text-center mt-8">
                 <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
             </div>
