--- a/mod_5_again.html
+++ b/mod_5_again.html
@@ -228,7 +228,7 @@
         <!-- Grammar Section -->
         <section id="grammar" class="content-section">
             <div class="space-y-8">
-                 <div class="activity-card border-purple-400">
+                 <div class="activity-card border-purple-500">
                     <h2 class="text-3xl font-bold text-center text-purple-600 mb-6">What are they doing?</h2>
                     <div class="text-center mb-6 bg-purple-100 p-4 rounded-xl">
                         <p class="text-lg"><strong>Grammar Rule:</strong></p>
@@ -245,13 +245,28 @@
                     <div id="grammar-feedback" class="mt-6 text-center text-2xl font-bold h-8"></div>
                 </div>
 
-                <div class="activity-card border-purple-400">
-                    <h2 class="text-3xl font-bold text-center text-purple-400 mb-6">Odd one out</h2>
+                <div class="activity-card border-purple-500">
+                    <h2 class="text-3xl font-bold text-center text-purple-500 mb-6">Listen and repeat</h2>
                     <div class="flex justify-center">
-                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/4.png" alt="Odd one out" class="rounded-2xl shadow-md w-full max-w-4xl">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/4.png" alt="Listen and repeat" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
-                
+
+<div class="activity-card border-purple-500">
+                    <h2 class="text-3xl font-bold text-center text-purple-500 mb-6">Let's play a game</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/18.png" alt="Let's play a game" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Open the link to roll the die!</p>
+                            <a href="https://www.calculator.net/dice-roller.html" target="_blank" rel="noopener noreferrer" class="nav-button bg-purple-500 hover:bg-blue-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Dice roller
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="text-center mt-8">
                 <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
