--- a/mod_5_again.html
+++ b/mod_5_again.html
@@ -267,6 +267,19 @@
                     </div>
                 </div>
 
+                <div class="activity-card border-purple-500">
+                    <h2 class="text-3xl font-bold text-center text-purple-500 mb-6">Can I play with you? Song</h2>
+                    <div class="flex flex-col items-center gap-6">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/5.png" alt="Can I play with you? Song" class="rounded-2xl shadow-md w-full max-w-2xl">
+                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_51_iwonder_2_song_ex9_p63" class="w-full max-w-md">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+
+
+
             </div>
             <div class="text-center mt-8">
                 <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
