--- a/mod_5_again.html
+++ b/mod_5_again.html
@@ -278,7 +278,21 @@
                     </div>
                 </div>
 
-
+<div class="activity-card border-purple-500">
+                    <h2 class="text-3xl font-bold text-center text-purple-500 mb-6">Grammar Review</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/19.png" alt="Grammar review" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Review the story in the digital book!</p>
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-blue-400 hover:bg-purple-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Open Digital Book
+                            </a>
+                            <p class="text-md text-gray-500 mt-2">Mod 5, exercise 7, page 60</p>
+                        </div>
+                    </div>
+                </div>
 
             </div>
             <div class="text-center mt-8">
