--- a/mod_5_again.html
+++ b/mod_5_again.html
@@ -286,7 +286,7 @@
                         </div>
                         <div class="text-center">
                             <p class="text-xl mb-6 text-gray-600">Review the story in the digital book!</p>
-                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-blue-400 hover:bg-purple-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-purple-500 hover:bg-purple-500 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Open Digital Book
                             </a>
                             <p class="text-md text-gray-500 mt-2">Mod 5, exercise 7, page 60</p>
