--- a/mod_5_again.html
+++ b/mod_5_again.html
@@ -272,7 +272,7 @@
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/5.png" alt="Can I play with you? Song" class="rounded-2xl shadow-md w-full max-w-2xl">
                         <p class="text-lg text-gray-600">Click play to listen to the song!</p>
-                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_51_iwonder_2_song_ex9_p63" class="w-full max-w-md">
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_51_iwonder_2_song_ex9_p63.mp3" class="w-full max-w-md">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
@@ -282,8 +282,8 @@
                     <h2 class="text-3xl font-bold text-center text-purple-500 mb-6">How many players?</h2>
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/6.png" alt="How many players?" class="rounded-2xl shadow-md w-full max-w-2xl">
-                        <p class="text-lg text-gray-600">Click play to listen to the song!</p>
-                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_52_iwonder_2_ex11_p64" class="w-full max-w-md">
+                        <p class="text-lg text-gray-600">Click to listen!</p>
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_52_iwonder_2_ex11_p64.mp3" class="w-full max-w-md">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
