--- a/mod_5.html
+++ b/mod_5.html
@@ -111,6 +111,9 @@
         <button onclick="showSection('vocabulary')" class="nav-button active bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-6 rounded-full text-lg">⚽ Vocabulary</button>
         <button onclick="showSection('story')" class="nav-button bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-full text-lg">📖 Story</button>
         <button onclick="showSection('grammar')" class="nav-button bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full text-lg">🤔 Grammar</button>
+
+        <button onclick="showSection('Project')" class="nav-button bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-full text-lg">📊 Project</button>
+
         <button onclick="showSection('maths')" class="nav-button bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-full text-lg">🔢 Maths (CLIL)</button>
         <button onclick="showSection('sounds')" class="nav-button bg-pink-500 hover:bg-pink-600 text-white font-bold py-3 px-6 rounded-full text-lg">🔊 Sounds</button>
     </nav>
@@ -315,6 +318,44 @@
             </div>
             <div class="text-center mt-8">
                 <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-purple-500 hover:bg-purple-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
+            </div>
+        </section>
+
+        <!-- Project Section -->
+        <section id="Project" class="content-section active">
+<div class="space-y-8">
+
+                <div class="activity-card border-yellow-600">
+                    <h2 class="text-3xl font-bold text-center text-yellow-600 mb-6">Sports Day</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/8.png" alt="Project" class="rounded-2xl shadow-md w-full max-w-4xl">
+
+                    </div>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/9.png" alt="Sports Day" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+
+                <div class="activity-card border-yellow-600">
+                    <h2 class="text-3xl font-bold text-center text-yellow-600 mb-6">Project Review</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/20.png" alt="Project review" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Review the story in the digital book!</p>
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-yellow-600 hover:bg-yellow-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Open Digital Book
+                            </a>
+                            <p class="text-md text-gray-500 mt-2">Mod 5, exercise 10, page 62</p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="text-center mt-8">
+                <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
             </div>
         </section>
 
