--- a/mod_5.html
+++ b/mod_5.html
@@ -384,6 +384,21 @@
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/21.png" alt="Numbers in a row" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
+
+                <div class="activity-card border-green-400">
+                    <h2 class="text-3xl font-bold text-center text-green-400 mb-6">Numbers Crossword</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_3/3.png" alt="Numbers Crossword" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Play a game to match the words to the pictures!</p>
+                            <a href="https://wordwall.net/resource/98362689" target="_blank" rel="noopener noreferrer" class="nav-button bg-green-400 hover:bg-green-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Play on Wordwall!
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
             <div class="text-center mt-8">
