--- a/mod_5.html
+++ b/mod_5.html
@@ -322,7 +322,7 @@
         </section>
 
         <!-- Project Section -->
-        <section id="Project" class="content-section active">
+        <section id="Project" class="content-section">
 <div class="space-y-8">
 
                 <div class="activity-card border-yellow-500">
@@ -333,6 +333,21 @@
                     </div>
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/9.png" alt="Sports Day" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+
+                <div class="activity-card border-yellow-500">
+                    <h2 class="text-3xl font-bold text-center text-yellow-500 mb-6">Numbers Crossword</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/22.png" alt="Numbers Crossword" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Play a game to match the words to the pictures!</p>
+                            <a href="https://wordwall.net/resource/98362689" target="_blank" rel="noopener noreferrer" class="nav-button bg-yellow-400 hover:bg-yellow-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Play on Wordwall!
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -409,6 +424,18 @@
         <!-- Sounds Section -->
         <section id="sounds" class="content-section">
              <div class="space-y-8">
+
+                <div class="activity-card border-pink-400">
+                    <h2 class="text-3xl font-bold text-center text-pink-400 mb-6">Listen, look and say</h2>
+                    <div class="flex flex-col items-center gap-6">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/11.png" alt="Listen, look and say" class="rounded-2xl shadow-md w-full max-w-2xl">
+                        <p class="text-lg text-gray-600">Click on the link to play the audio</p>
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_53_iwonder_2_ex1_p68" class="w-full max-w-md">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+
                 <div class="activity-card border-pink-400">
                     <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Magic 'e' Words</h2>
                     <p class="text-center text-gray-600 mb-6">Look at the word. Does it have a magic 'e'? (Like "game" vs "Sam")</p>
