--- a/mod_5.html
+++ b/mod_5.html
@@ -430,7 +430,7 @@
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/11.png" alt="Listen, look and say" class="rounded-2xl shadow-md w-full max-w-2xl">
                         <p class="text-lg text-gray-600">Click on the link to play the audio</p>
-                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_53_iwonder_2_ex1_p68" class="w-full max-w-md">
+                        <audio controls src="https://johanka2014.github.io/i_wonder_2/mod_5/1_53_iwonder_2_ex1_p68.mp3" class="w-full max-w-md">
                             Your browser does not support the audio element.
                         </audio>
                     </div>
