--- a/mod_5.html
+++ b/mod_5.html
@@ -377,7 +377,7 @@
         <!-- Maths / CLIL Section -->
         <section id="maths" class="content-section">
             <div class="space-y-8">
-                <div class="activity-card border-green-400">
+                <div class="activity-card border-green-600">
                     <h2 class="text-3xl font-bold text-center text-green-600 mb-6">Odd or Even?</h2>
                     <div class="flex justify-center gap-8 mb-6 text-xl">
                         <div class="bg-red-100 p-4 rounded-lg text-red-600 border-2 border-red-300">
@@ -393,31 +393,47 @@
                     </div>
                 </div>
 
-                <div class="activity-card border-green-400">
-                    <h2 class="text-3xl font-bold text-center text-yellow-500 mb-6">Numbers in a row</h2>
+                <div class="activity-card border-green-600">
+                    <h2 class="text-3xl font-bold text-center text-green-600 mb-6">Numbers in a row</h2>
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/21.png" alt="Numbers in a row" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
 
-                <div class="activity-card border-green-400">
-                    <h2 class="text-3xl font-bold text-center text-green-400 mb-6">Numbers Crossword</h2>
+                <div class="activity-card border-green-600">
+                    <h2 class="text-3xl font-bold text-center text-green-600 mb-6">Numbers Crossword</h2>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
                             <img src="https://johanka2014.github.io/i_wonder_2/mod_3/3.png" alt="Numbers Crossword" class="rounded-2xl shadow-md w-full">
                         </div>
                         <div class="text-center">
                             <p class="text-xl mb-6 text-gray-600">Play a game to match the words to the pictures!</p>
-                            <a href="https://wordwall.net/resource/98362689" target="_blank" rel="noopener noreferrer" class="nav-button bg-green-400 hover:bg-green-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                            <a href="https://wordwall.net/resource/98362689" target="_blank" rel="noopener noreferrer" class="nav-button bg-green-600 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Play on Wordwall!
                             </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="activity-card border-green-600">
+                    <h2 class="text-3xl font-bold text-center text-green-600 mb-6">Maths Review</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/24.png" alt="Project review" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Review the maths section in the digital book!</p>
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-green-600 hover:bg-green-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Open Digital Book
+                            </a>
+                            <p class="text-md text-gray-500 mt-2">Mod 5, CLIL, Maths, exercise 1, page 64</p>
                         </div>
                     </div>
                 </div>
                 
             </div>
             <div class="text-center mt-8">
-                <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
+                <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="nav-button bg-green-600 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-full text-lg">⬆️ Back to Top</button>
             </div>
         </section>
 
