--- a/mod_5.html
+++ b/mod_5.html
@@ -461,8 +461,23 @@
                     </div>
                 </div>
 
+                <div class="activity-card border-pink-400">
+                    <h2 class="text-3xl font-bold text-center text-pink-400 mb-6">‘long a’, ‘long i’ words</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/28.png" alt="‘long a’, ‘long i’ words" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Play a game to match the words to the pictures!</p>
+                            <a href="https://wordwall.net/resource/106277956" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-400 hover:bg-pink-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Play on Wordwall!
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
 <div class="activity-card border-pink-400">
-                    <h2 class="text-3xl font-bold text-center text-pink-500 mb-6">Numbers in a row</h2>
+
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/12.png" alt="Numbers in a row" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
