--- a/mod_5.html
+++ b/mod_5.html
@@ -441,8 +441,8 @@
         <section id="sounds" class="content-section">
              <div class="space-y-8">
 
-                <div class="activity-card border-pink-400">
-                    <h2 class="text-3xl font-bold text-center text-pink-400 mb-6">Listen, look and say</h2>
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Listen, look and say</h2>
                     <div class="flex flex-col items-center gap-6">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/11.png" alt="Listen, look and say" class="rounded-2xl shadow-md w-full max-w-2xl">
                         <p class="text-lg text-gray-600">Click on the link to play the audio</p>
@@ -452,7 +452,7 @@
                     </div>
                 </div>
 
-                <div class="activity-card border-pink-400">
+                <div class="activity-card border-pink-600">
                     <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Magic 'e' Words</h2>
                     <p class="text-center text-gray-600 mb-6">Look at the word. Does it have a magic 'e'? (Like "game" vs "Sam")</p>
                     
@@ -461,29 +461,29 @@
                     </div>
                 </div>
 
-                <div class="activity-card border-pink-400">
-                    <h2 class="text-3xl font-bold text-center text-pink-400 mb-6">‘long a’, ‘long i’ words</h2>
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">‘long a’, ‘long i’ words</h2>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
                             <img src="https://johanka2014.github.io/i_wonder_2/mod_5/28.png" alt="‘long a’, ‘long i’ words" class="rounded-2xl shadow-md w-full">
                         </div>
                         <div class="text-center">
                             <p class="text-xl mb-6 text-gray-600">Play a game to match the words to the pictures!</p>
-                            <a href="https://wordwall.net/resource/106277956" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-400 hover:bg-pink-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                            <a href="https://wordwall.net/resource/106277956" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-600 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Play on Wordwall!
                             </a>
                         </div>
                     </div>
                 </div>
 
-<div class="activity-card border-pink-400">
+<div class="activity-card border-pink-600">
 
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/12.png" alt="Numbers in a row" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
 
-                <div class="activity-card border-pink-500">
+                <div class="activity-card border-pink-600">
                     <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Project Review</h2>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
@@ -491,11 +491,54 @@
                         </div>
                         <div class="text-center">
                             <p class="text-xl mb-6 text-gray-600">Review the story in the digital book!</p>
-                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-500 hover:bg-pink-500 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-600 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Open Digital Book
                             </a>
                             <p class="text-md text-gray-500 mt-2">Mod 5, CLIL, exercise 1, page 65</p>
                         </div>
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Write the rhyming word</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/29.png" alt="Write the rhyming word" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Match the word halves</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/33.png" alt="‘Match the word halves" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Match the word halves</p>
+                            <a href="https://learningapps.org/watch?v=pz93x4tkj26" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-400 hover:bg-pink-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Play on LearningApps!
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">What’s missing?</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/30.png" alt="What’s missing?" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Yes or no?</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/31.png" alt="Yes or no?" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Make new words</h2>
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/32.png" alt="Make new words" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
 
