--- a/mod_5.html
+++ b/mod_5.html
@@ -484,22 +484,6 @@
                 </div>
 
                 <div class="activity-card border-pink-600">
-                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Project Review</h2>
-                    <div class="grid md:grid-cols-2 gap-8 items-center">
-                        <div>
-                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/23.png" alt="Project review" class="rounded-2xl shadow-md w-full">
-                        </div>
-                        <div class="text-center">
-                            <p class="text-xl mb-6 text-gray-600">Review the story in the digital book!</p>
-                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-600 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
-                                Open Digital Book
-                            </a>
-                            <p class="text-md text-gray-500 mt-2">Mod 5, CLIL, exercise 1, page 65</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="activity-card border-pink-600">
                     <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Write the rhyming word</h2>
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/29.png" alt="Write the rhyming word" class="rounded-2xl shadow-md w-full max-w-4xl">
@@ -514,10 +498,16 @@
                         </div>
                         <div class="text-center">
                             <p class="text-xl mb-6 text-gray-600">Match the word halves</p>
-                            <a href="https://learningapps.org/watch?v=pz93x4tkj26" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-400 hover:bg-pink-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                            <a href="https://learningapps.org/watch?v=pz93x4tkj26" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-600 hover:bg-pink-400 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
                                 Play on LearningApps!
                             </a>
                         </div>
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <div class="flex justify-center">
+                        <img src="https://johanka2014.github.io/i_wonder_2/mod_5/34.png" alt="Make sentences" class="rounded-2xl shadow-md w-full max-w-4xl">
                     </div>
                 </div>
 
@@ -539,6 +529,22 @@
                     <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Make new words</h2>
                     <div class="flex justify-center">
                         <img src="https://johanka2014.github.io/i_wonder_2/mod_5/32.png" alt="Make new words" class="rounded-2xl shadow-md w-full max-w-4xl">
+                    </div>
+                </div>
+
+                <div class="activity-card border-pink-600">
+                    <h2 class="text-3xl font-bold text-center text-pink-600 mb-6">Project Review</h2>
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div>
+                            <img src="https://johanka2014.github.io/i_wonder_2/mod_5/23.png" alt="Project review" class="rounded-2xl shadow-md w-full">
+                        </div>
+                        <div class="text-center">
+                            <p class="text-xl mb-6 text-gray-600">Review the story in the digital book!</p>
+                            <a href="https://expressdigibooks.com/reader/read/297" target="_blank" rel="noopener noreferrer" class="nav-button bg-pink-600 hover:bg-pink-600 text-white font-bold py-4 px-8 rounded-full text-xl inline-block">
+                                Open Digital Book
+                            </a>
+                            <p class="text-md text-gray-500 mt-2">Mod 5, CLIL, exercise 1, page 65</p>
+                        </div>
                     </div>
                 </div>
 
